# aoc25

./: CMakeLists.txt  README.md  day1.cpp  day2.cpp  day3.cpp  day4.cpp
2025/: CMakeLists.txt  day5.cpp  day6.cpp  day7.cpp
